--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
             <div class="text-center md:text-left">
                 <span class="text-2xl font-bold text-white">Nistha Patel</span>
                 <p class="text-sm text-slate-500 mt-1">Data Analyst • Gujarat, India</p>
-                <p class="text-sm text-slate-500">9313950715</p>
+                <p class="text-sm text-slate-500">nisthapatel1107@gmail.com</p>
             </div>
 
             <div class="flex space-x-6">
@@ -502,5 +502,6 @@
         lucide.createIcons();
     </script>
 </body>
+
 
 </html>
