--- a/index.html
+++ b/index.html
@@ -771,11 +771,9 @@
             <a href="#experience">Experience</a>
             <a href="#projects">Projects</a>
         </div>
-       <a href="resume.pdf" download="Nistha_Patel_Resume.pdf"
-            class="flex items-center justify-center px-8 py-4 bg-gradient-to-r from-sky-600 to-blue-700 text-white rounded-xl font-semibold shadow-lg shadow-blue-500/30 hover:shadow-blue-500/50 hover:-translate-y-1 transition-all duration-300">
+        <a href="resume.pdf" download="Nistha_Patel_Resume.pdf" class="btn-download">
             <i data-lucide="download" class="w-5 h-5 mr-2"></i> Download Resume
         </a>
-
     </nav>
 
     <!-- Hero -->
@@ -976,6 +974,5 @@
     </footer>
 
 </body>
-
 
 </html>
